# project-manage-api

./: .env  .env.example  .gitgnore  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 176fbc69cf08_initial_migration.py  844432589a4d_create_admin_system_seed.py
app/: __init__.py  main.py
app/api/: main.py
app/api/v1/admin/: deps.py  main.py
app/api/v1/admin/auth/: controller.py  service.py
app/api/v1/admin/auth/dto/: login.py
app/api/v1/auth/: controller.py
app/core/: config.py  database.py
app/core/cache/: service.py  session.py
app/core/database/: database.py  mixin.py  session.py  transactional.py
app/core/exceptions/: http_exceptions.py
app/core/repositories/: __init__.py
app/core/secret/: config.py
app/core/security/: jwt.py
app/core/validations/: utils.py  validators.py
app/models/: __init__.py  admin.py  token_blacklist.py  user.py
app/repositories/admin/: crud.py
app/repositories/token_blacklist/: crud.py
app/repositories/user/: crud.py
